--- a/app/templates/partials/ip_assets_table.html
+++ b/app/templates/partials/ip_assets_table.html
@@ -6,6 +6,7 @@
           <th>IP address</th>
           <th>Project</th>
           <th>Type</th>
+          <th>Tags</th>
           <th>Notes</th>
           <th>Actions</th>
         </tr>
