Update tags table actions menu

--- a/app/static/app.css
+++ b/app/static/app.css
@@ -327,6 +327,7 @@ p {
 
 .projects-existing-card .card-header,
 .owners-existing-card .card-header,
+.tags-existing-card .card-header,
 .needs-assignment-matching-card .card-header {
   padding: 24px 24px 0;
   margin-bottom: 12px;
